# homelab-autodoist-events

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
src/autodoist_events_worker/: __main__.py  config.py  db.py  rules.py  service.py  todoist_client.py
src/todoist_automation_shared/: __init__.py  webhook.py
tests/: test_config.py  test_events_db.py  test_internal_trigger.py  test_oauth_callback.py  test_rules.py  test_shared_webhook.py  test_todoist_client.py
