[project]
name = "homelab-autodoist-events"
version = "0.1.0"
description = "Todoist webhook events worker for Autodoist"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Evan Rauner", email = "raunerevan@gmail.com" }
]
dependencies = [
  "Flask>=3.0.0",
  "requests>=2.31.0",
  "homelab-todoist-core==0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
autodoist-events = "autodoist_events_worker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autodoist_events_worker", "src/todoist_automation_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[[tool.uv.index]]
name = "nexus-pypi-hosted"
url = "https://nexus.erauner.dev/repository/pypi-hosted/simple"

[tool.uv.sources]
homelab-todoist-core = { index = "nexus-pypi-hosted" }
